@@ -161,7 +161,9 @@ function importTestSuite () {
       var expected = [ 
         { "a": "1", "b": 1, "c": "1.3", "e": -5, "id": 1 }, 
         { "b": "", "c": 3.1, "d": -2.5, "e": "ddd \" ' ffd", "id": 2 }, 
-        { "a": "9999999999999999999999999999999999", "b": "test", "c" : -99999999, "d": true, "e": -888.4434, "id": 5 }
+        { "a": "9999999999999999999999999999999999", "b": "test", "c" : -99999999, "d": true, "e": -888.4434, "id": 5 },
+        { "a": 10e4, "b": 20.5, "c": -42, "d": " null ", "e": false, "id": 6 },
+        { "a": -1.05e2, "b": 1.05e-2, "c": true, "d": false, "id": 7 }
       ];
 
       var actual = getQueryResults("FOR i IN UnitTestsImportCsv1 SORT i.id RETURN i");
